--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "build": "npm run clean && npm run lint && tsc",
     "changelog": "conventional-changelog -p angular -u",
     "changelog:update": "conventional-changelog -p angular -i CHANGELOG.md -s && git add CHANGELOG.md",
-    "clean": "(rm -r ./.nyc_output || true) && (rm -r ./coverage || true) && (rm -r ./dist || true)",
-    "clean:all": "npm run clean && (rm -r ./node_modules || true)",
+    "clean": "(rimraf -r ./.nyc_output || true) && (rimraf -r ./coverage || true) && (rimraf -r ./dist || true)",
+    "clean:all": "npm run clean && (rimraf -r ./node_modules || true)",
     "cover": "nyc npm run test",
     "cover:check": "nyc --check-coverage npm run test",
     "coveralls": "nyc report --reporter=text-lcov | coveralls",
@@ -46,8 +46,10 @@
     "conventional-changelog-cli": "^2.0.12",
     "coveralls": "^3.0.3",
     "cz-conventional-changelog": "^3.0.2",
+    "mkdirp": "^1.0.4",
     "mocha": "^8.4.0",
     "nyc": "^15.0.0",
+    "rimraf": "^3.0.2",
     "source-map-support": "^0.5.12",
     "ts-node": "^9.0.0",
     "tslint": "^6.0.0",
